added first logic