@@ -10,6 +10,7 @@ import com.rybki.spring_boot.model.domain.Idea;
 import com.rybki.spring_boot.model.dto.GigaChatRequestDto;
 import com.rybki.spring_boot.model.dto.GigaChatResponseDto;
 import com.rybki.spring_boot.model.dto.NnResponseDto;
+import com.rybki.spring_boot.service.DtoRequestFactoryService;
 import com.rybki.spring_boot.service.GigaChatAuthService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -26,13 +27,16 @@ public class IdeaExtractorClient {
 
     private final WebClient webClient = WebClient.builder().build();
     private final GigaChatAuthService authService;
+    private final DtoRequestFactoryService dtoRequestFactoryService;
     private final ObjectMapper objectMapper = new ObjectMapper();
 
     @Value("${gigachat.api.url}")
     private String apiUrl;
+    @Value("${spring.data.ideaExtractorTimeout}")
+    private Integer timeoutSeconds;
 
-    public Mono<List<Idea>> extractIdeas(String text) {
-        GigaChatRequestDto request = GigaChatRequestDto.createIdeaExtractionRequest(text);
+    public Mono<List<Idea>> extractIdeas(final String text) {
+        final GigaChatRequestDto request = dtoRequestFactoryService.createIdeaExtractionRequest(text);
 
         log.debug("📤 [GIGACHAT] Sending request to find ideas from: {}", text);
 
@@ -51,7 +55,7 @@ public class IdeaExtractorClient {
                     .bodyValue(request)
                     .retrieve()
                     .bodyToMono(GigaChatResponseDto.class)
-                    .timeout(Duration.ofSeconds(30))
+                    .timeout(Duration.ofSeconds(timeoutSeconds))
                     .doOnNext(response -> {
                         log.debug("📥 [GIGACHAT] Response: {}", response);
                     })
@@ -59,6 +63,12 @@ public class IdeaExtractorClient {
                     .doOnSuccess(ideas -> {
                         log.info("✅ [GIGACHAT] Extracted {} ideas", ideas.size());
                         log.debug("📥 [GIGACHAT] Extracted ideas: {}", ideas);
+
+                        if (!ideas.isEmpty()) {
+                            final List<String> ideaStrings = extractIdeaStrings(ideas);
+                            dtoRequestFactoryService.addFoundIdeas(ideaStrings);
+                            log.debug("💾 [GIGACHAT] Saved {} ideas to context", ideaStrings.size());
+                        }
                     })
                     .onErrorResume(e -> {
                         log.error("❌ [GIGACHAT] Request failed: {}", e.getMessage(), e);
@@ -67,16 +77,28 @@ public class IdeaExtractorClient {
             });
     }
 
-    private Mono<List<Idea>> parseResponse(GigaChatResponseDto response) {
+
+    private List<String> extractIdeaStrings(final List<Idea> ideas) {
+        return ideas.stream()
+            .map(idea -> {
+                final String ideaString = idea.title() + ": " + idea.description();
+                log.debug("💡 [GIGACHAT] Converting to string: {}",
+                    ideaString);
+                return ideaString;
+            })
+            .toList();
+    }
+
+    private Mono<List<Idea>> parseResponse(final GigaChatResponseDto response) {
         if (response == null || response.choices() == null || response.choices().isEmpty()) {
             return Mono.just(Collections.emptyList());
         }
 
-        String content = response.choices().get(0).message().content();
-        String jsonContent = extractJsonFromMarkdown(content);
+        final String content = response.choices().getFirst().message().content();
+        final String jsonContent = extractJsonFromMarkdown(content);
 
         try {
-            NnResponseDto nnResponse = objectMapper.readValue(jsonContent, NnResponseDto.class);
+            final NnResponseDto nnResponse = objectMapper.readValue(jsonContent, NnResponseDto.class);
 
             if ("no_ideas_found".equalsIgnoreCase(nnResponse.status())) {
                 return Mono.just(Collections.emptyList());
@@ -87,7 +109,7 @@ public class IdeaExtractorClient {
                 return Mono.just(Collections.emptyList());
             }
 
-            List<Idea> ideas = nnResponse.ideas().stream()
+            final List<Idea> ideas = nnResponse.ideas().stream()
                 .map(idea -> new Idea(
                     idea.id(),
                     idea.title(),
@@ -97,23 +119,23 @@ public class IdeaExtractorClient {
 
             return Mono.just(ideas);
 
-        } catch (JsonProcessingException e) {
+        } catch (final JsonProcessingException e) {
             log.error("❌ [GIGACHAT] Failed to process JSON", e);
             return Mono.just(Collections.emptyList());
         }
     }
 
-    private String extractJsonFromMarkdown(String content) {
+    private String extractJsonFromMarkdown(final String content) {
         if (content.contains("```json")) {
-            int start = content.indexOf("```json") + 7;
-            int end = content.indexOf("```", start);
+            final int start = content.indexOf("```json") + "```json".length();
+            final int end = content.indexOf("```", start);
             if (end > start) {
                 return content.substring(start, end).trim();
             }
         }
         if (content.contains("```")) {
-            int start = content.indexOf("```") + 3;
-            int end = content.indexOf("```", start);
+            final int start = content.indexOf("```") + "```".length();
+            final int end = content.indexOf("```", start);
             if (end > start) {
                 return content.substring(start, end).trim();
             }
